[package]
name = "chroma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16"
pollster = "0.2"
bytemuck = { version = "1.12", features = ["derive"]}
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}
anyhow = "1.0"
ultraviolet = "0.9"
cfg-if = "1"
cgmath = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16", features = ["webgl"]}

[lib]
crate-type = ["cdylib", "rlib"]